--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>non stop music</title>
     <meta name="viewport" content="width=device-width initial-scale=1"/>
         <script src="https://kit.fontawesome.com/da18ee42b5.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="music.css">
+    <link rel="stylesheet" href="style.css">
     
     
     <h1><i class="fa-solid fa-microphone fa-shake" style="color: #ffffff;"></i><span>Abamx</span> to the world</h1>
