--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <h1><i class="fa-solid fa-microphone fa-shake" style="color: #ffffff;"></i><span>Abamx</span> to the world</h1>
     <hr>
-   <a target="blank_" href="../Images/abamx2.png"> <img src="../Images/abamx2.png" alt="photo">
+   <a target="blank_" href="./Images/abamx2.png"> <img src="../Images/abamx2.png" alt="photo">
      </a>
 </head>
 <body>
